--- a/pom.xml
+++ b/pom.xml
@@ -9,7 +9,7 @@
   </parent>
 
   <artifactId>p4</artifactId>
-  <version>1.4.5-SNAPSHOT</version>
+  <version>1.4.5.2-EADGIS</version>
   <packaging>hpi</packaging>
 
   <name>P4 Plugin</name>
@@ -17,8 +17,22 @@
   <url>https://wiki.jenkins-ci.org/display/JENKINS/P4+Plugin</url>
 
   <properties>
-    <jenkins.version>1.596.1</jenkins.version>
+    <skipTests>true</skipTests>
+    <maven.javadoc.skip>true</maven.javadoc.skip>
+    <maven.skipTests>true</maven.skipTests>
+
+    <!-- Baseline Jenkins version you use to build the plugin. Users must have this version or newer to run. -->
+    <jenkins.version>1.625.3</jenkins.version>
+    <!-- Java Level to use. Java 7 required when using core >= 1.612 -->
     <java.level>7</java.level>
+    <!-- Jenkins Test Harness version you use to test the plugin. -->
+    <!-- For Jenkins version >= 1.580.1 use JTH 2.x or higher. -->
+    <jenkins-test-harness.version>2.13</jenkins-test-harness.version>
+    <!-- Other properties you may want to use:
+         ~ hpi-plugin.version: The HPI Maven Plugin version used by the plugin..
+         ~ stapler-plugin.version: The Stapler Maven plugin version required by the plugin.
+    -->
+
   </properties>
     
   <scm>
